# Chess-Game

./: Cargo.toml  README.md
src/: bishop.rs  board.rs  king.rs  knight.rs  main.rs  movement.rs  movements.rs  pawn.rs  piece.rs  queen.rs  rock.rs
tests/: plugin_integration_tests.rs
