[workspace]
resolver = "2"
members = []

[package]
name = "bevy-chess"
version = "0.1.0"
authors = ["FrancoGiachetta27 <fgiachetta@frba.utn.edu.ar>"]
readme = "README.md"
description = """
Short description goes here.
"""
#license = "MIT OR Apache-2.0"
#repository = "https://github.com/FrancoGiachetta27/bevy-chess"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Other crates of possible interest:
# https://bevyengine.org/assets/#assets
# https://gist.github.com/taurr/962ceb49472993e3092e97b07339c164
bevy = { version = "0.9.1", features = [] }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }
bevy-inspector-egui = "0.14"
bevy_ecs_tilemap = "0.9.0"
bevy_mod_picking = "0.11.0"

[dev-dependencies]
anyhow = "1.0"

#[patch.crates-io]
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
incremental = true

# Enable target specific optimizations in release mode
[profile.release]
lto = "thin"

